--- a/frontend/src/css/email-verification.css
+++ b/frontend/src/css/email-verification.css
@@ -42,7 +42,13 @@
 	margin-top: 50px;
 	font-size: 15px;
 	color: #1976d2;
+	background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	font-family: inherit;
 	text-decoration: none;
+	font-weight: normal;
 }
 
 .resend-link:hover {
